// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileMain should not render correctly 1`] = `
<ProfileMain
  bio="egrerg"
  firstName="ererger"
  publications={Array []}
>
  <div
    className="main"
  >
    <Title
      className="title-lg"
      content="ererger undefined"
    >
      <h1
        className="title title-lg"
      >
        ererger undefined
      </h1>
    </Title>
    <div
      style={
        Object {
          "maxHeight": "200px",
        }
      }
    >
      egrerg
    </div>
    <div
      className="profile-tab-menu"
    >
      <Tab
        grid={
          Object {
            "paneWidth": 12,
            "tabWidth": 4,
          }
        }
        menu={
          Object {
            "pointing": true,
            "secondary": true,
          }
        }
        panes={
          Array [
            Object {
              "menuItem": "Posts",
              "render": [Function],
            },
          ]
        }
        renderActiveOnly={true}
      >
        <div>
          <Menu
            activeIndex={0}
            items={
              Array [
                "Posts",
              ]
            }
            onItemClick={[Function]}
            pointing={true}
            secondary={true}
          >
            <div
              className="ui pointing secondary menu"
            >
              <MenuItem
                active={true}
                content="Posts"
                index={0}
                key="Posts"
                name="Posts"
                onClick={[Function]}
              >
                <a
                  className="active item"
                  onClick={[Function]}
                >
                  Posts
                </a>
              </MenuItem>
            </div>
          </Menu>
          <TabPane
            active={true}
            as={[Function]}
            attached={false}
          >
            <Segment
              attached={false}
              className="active tab"
            >
              <div
                className="ui segment active tab"
              >
                <ArticleLists
                  articles={Array []}
                >
                  <div
                    className="post-lists"
                  >
                    <p>
                      You have no publications
                    </p>
                  </div>
                </ArticleLists>
              </div>
            </Segment>
          </TabPane>
        </div>
      </Tab>
    </div>
  </div>
</ProfileMain>
`;

exports[`ProfileMain should not render correctly 2`] = `
<ProfileMain
  publications={Array []}
>
  <div
    className="main"
  >
    <Title
      className="title-lg"
      content="undefined undefined"
    >
      <h1
        className="title title-lg"
      >
        undefined undefined
      </h1>
    </Title>
    <div
      style={
        Object {
          "maxHeight": "200px",
        }
      }
    />
    <div
      className="profile-tab-menu"
    >
      <Tab
        grid={
          Object {
            "paneWidth": 12,
            "tabWidth": 4,
          }
        }
        menu={
          Object {
            "pointing": true,
            "secondary": true,
          }
        }
        panes={
          Array [
            Object {
              "menuItem": "Posts",
              "render": [Function],
            },
          ]
        }
        renderActiveOnly={true}
      >
        <div>
          <Menu
            activeIndex={0}
            items={
              Array [
                "Posts",
              ]
            }
            onItemClick={[Function]}
            pointing={true}
            secondary={true}
          >
            <div
              className="ui pointing secondary menu"
            >
              <MenuItem
                active={true}
                content="Posts"
                index={0}
                key="Posts"
                name="Posts"
                onClick={[Function]}
              >
                <a
                  className="active item"
                  onClick={[Function]}
                >
                  Posts
                </a>
              </MenuItem>
            </div>
          </Menu>
          <TabPane
            active={true}
            as={[Function]}
            attached={false}
          >
            <Segment
              attached={false}
              className="active tab"
            >
              <div
                className="ui segment active tab"
              >
                <ArticleLists
                  articles={Array []}
                >
                  <div
                    className="post-lists"
                  >
                    <p>
                      You have no publications
                    </p>
                  </div>
                </ArticleLists>
              </div>
            </Segment>
          </TabPane>
        </div>
      </Tab>
    </div>
  </div>
</ProfileMain>
`;

exports[`ProfileMain should render Posts Tab correctly 1`] = `
<ProfileMain
  bio="I am the correct user"
  email="dummy@user.com"
  error={Object {}}
  firstName="mr"
  followers={Array []}
  followings={Array []}
  image="http://dummyImage.jpg"
  isDeleting={false}
  isLoading={true}
  lastName="user"
  publications={Array []}
  username="dummyuser"
>
  <div
    className="main"
  >
    <Title
      className="title-lg"
      content="mr user"
    >
      <h1
        className="title title-lg"
      >
        mr user
      </h1>
    </Title>
    <div
      style={
        Object {
          "maxHeight": "200px",
        }
      }
    >
      I am the correct user
    </div>
    <div
      className="profile-tab-menu"
    >
      <Tab
        grid={
          Object {
            "paneWidth": 12,
            "tabWidth": 4,
          }
        }
        menu={
          Object {
            "pointing": true,
            "secondary": true,
          }
        }
        panes={
          Array [
            Object {
              "menuItem": "Posts",
              "render": [Function],
            },
          ]
        }
        renderActiveOnly={true}
      >
        <div>
          <Menu
            activeIndex={0}
            items={
              Array [
                "Posts",
              ]
            }
            onItemClick={[Function]}
            pointing={true}
            secondary={true}
          >
            <div
              className="ui pointing secondary menu"
            >
              <MenuItem
                active={true}
                content="Posts"
                index={0}
                key="Posts"
                name="Posts"
                onClick={[Function]}
              >
                <a
                  className="active item"
                  onClick={[Function]}
                >
                  Posts
                </a>
              </MenuItem>
            </div>
          </Menu>
          <TabPane
            active={true}
            as={[Function]}
            attached={false}
          >
            <Segment
              attached={false}
              className="active tab"
            >
              <div
                className="ui segment active tab"
              >
                <ArticleLists
                  articles={Array []}
                  email="dummy@user.com"
                  isDeleting={false}
                >
                  <div
                    className="post-lists"
                  >
                    <p>
                      You have no publications
                    </p>
                  </div>
                </ArticleLists>
              </div>
            </Segment>
          </TabPane>
        </div>
      </Tab>
    </div>
  </div>
</ProfileMain>
`;

exports[`ProfileMain should render correctly 1`] = `
<ProfileMain
  bio="I am the correct user"
  email="dummy@user.com"
  error={Object {}}
  firstName="mr"
  followers={Array []}
  followings={Array []}
  image="http://dummyImage.jpg"
  isDeleting={false}
  isLoading={true}
  lastName="user"
  publications={Array []}
  username="dummyuser"
>
  <div
    className="main"
  >
    <Title
      className="title-lg"
      content="mr user"
    >
      <h1
        className="title title-lg"
      >
        mr user
      </h1>
    </Title>
    <div
      style={
        Object {
          "maxHeight": "200px",
        }
      }
    >
      I am the correct user
    </div>
    <div
      className="profile-tab-menu"
    >
      <Tab
        grid={
          Object {
            "paneWidth": 12,
            "tabWidth": 4,
          }
        }
        menu={
          Object {
            "pointing": true,
            "secondary": true,
          }
        }
        panes={
          Array [
            Object {
              "menuItem": "Posts",
              "render": [Function],
            },
          ]
        }
        renderActiveOnly={true}
      >
        <div>
          <Menu
            activeIndex={0}
            items={
              Array [
                "Posts",
              ]
            }
            onItemClick={[Function]}
            pointing={true}
            secondary={true}
          >
            <div
              className="ui pointing secondary menu"
            >
              <MenuItem
                active={true}
                content="Posts"
                index={0}
                key="Posts"
                name="Posts"
                onClick={[Function]}
              >
                <a
                  className="active item"
                  onClick={[Function]}
                >
                  Posts
                </a>
              </MenuItem>
            </div>
          </Menu>
          <TabPane
            active={true}
            as={[Function]}
            attached={false}
          >
            <Segment
              attached={false}
              className="active tab"
            >
              <div
                className="ui segment active tab"
              >
                <ArticleLists
                  articles={Array []}
                  email="dummy@user.com"
                  isDeleting={false}
                >
                  <div
                    className="post-lists"
                  >
                    <p>
                      You have no publications
                    </p>
                  </div>
                </ArticleLists>
              </div>
            </Segment>
          </TabPane>
        </div>
      </Tab>
    </div>
  </div>
</ProfileMain>
`;
